TrialoftheTitansPackage/main/default/objects/One_on_One__c/One_on_One__c.object-meta.xml
<CustomObject>
    <label>One on One</label>
    <nameField>
        <label>One on One Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One on Ones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>