TrialoftheTitansPackage/main/default/objects/One_on_One__c/fields/Hero__c.field-meta.xml
<CustomField>
    <fullName>Hero__c</fullName>
    <label>Hero</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>One on Ones</relationshipLabel>
    <relationshipName>One_on_Ones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>