TrialoftheTitansPackage/main/default/objects/One_on_One__c/fields/Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Professionalism__c</fullName>
    <inlineHelpText>Ability to act and present a professional demeanor and appearance.</inlineHelpText>
    <label>Professionalism</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>