TrialoftheTitansPackage/main/default/objects/One_on_One__c/fields/Soft_Skill_Fluency__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skill_Fluency__c</fullName>
    <inlineHelpText>Ability to speak effectively with minimal disfluency or other factors.</inlineHelpText>
    <label>Soft Skill Fluency</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>