TrialoftheTitansPackage/main/default/objects/One_on_One__c/fields/Technical_Fluency__c.field-meta.xml
<CustomField>
    <fullName>Technical_Fluency__c</fullName>
    <inlineHelpText>Ability to use correct technical terminology when discussing the technology.</inlineHelpText>
    <label>Technical Fluency</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>